# demo-clinic-app

./: .env.local.example  README.md  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js
app/: page.tsx
app/admin/settings/: page.tsx
app/patient/booking/: page.tsx
app/patient/queue/: page.tsx
backend/: .env.example  CMakeLists.txt  README.md
backend/src/: main.cpp
backend/src/api/: HttpServer.cpp  HttpServer.hpp  SupabaseClient.cpp  SupabaseClient.hpp
backend/src/models/: Admin.hpp  Doctor.hpp  PatientRecord.hpp  Pharmacist.hpp  PrescriptionItem.hpp  Service.hpp  User.hpp
backend/src/utils/: ApiResponse.hpp  AuthManager.cpp  AuthManager.hpp
components/: AppointmentForm.tsx  DoctorForm.tsx  NavBar.tsx  PharmacyQueue.tsx  QueueStatus.tsx
hooks/: useAppSettings.ts  useAppointments.ts
lib/: realtime.ts  supabase.ts
supabase/: schema_appointments.sql
types/: index.ts
